Added more comments.

--- a/app/templates/view.twig
+++ b/app/templates/view.twig
@@ -1,3 +1,8 @@
+{#
+view.twig
+
+Unused file that was going to be used as a review page for collections.
+#}
 {% extends "base.twig" %}
 
 {% block content %}
