Fixed front page.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -67,7 +67,7 @@
 							<p>Send your collections to the Magpie app and share them on social media. Also keep track of your collections on the website.</p>
 						</div>
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/autoBackup.png" alt="autoBackup">
+							<img class="img-responsive" src="img/AutoBackup.png" alt="autoBackup">
 							<h3>Backups for the App</h3>
 							<p>The CMS keeps track of all down loads to the mobile app. Alowing for ease of backing up and recovery of user data.</p>
 						</div>
